# ragme-io

./: .env.example  .gitignore  .pid  .pylintrc  CONTRIBUTING.md  PRESENTATION.md  README.md  TODOs.md  VECTOR_DB_ABSTRACTION.md  agents.yaml  agents.yaml.example  api.py  common.py  config.yaml  config.yaml.example  config.yaml.test  env.example  pyproject.toml  ragme-mcp.py  ragme.py  ragme_agent.py  ragme_api.py  ragme_mcp.py  ragme_ui.py  requirements-agents.txt  requirements-test.txt  requirements.txt  setup-ci.sh  setup.sh  start.sh  stop.sh  test-integration.sh  test.sh  test_add_json.py  test_configmap.sh  test_ragme.py  tests.sh
chrome_ext/: create_icons.html  manifest.json  popup.html  popup.js
deployment/: README.md  deploy-gke.sh  deploy.sh  kind-config.yaml
docs/: AGENT_REFACTOR.md  AI_ACCELERATION.md  AI_SUMMARY_CACHING.md  ARCHITECTURE.md  CI_CD.md  CI_LINT_FIXES.md  CONFIG.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_PROCESSING_PIPELINE.md  DATETIME_LISTING.md  DEPLOYMENT_CONTAINERS.md  DEPLOYMENT_KUBERNETES.md  DEPLOYMENT_OPERATOR.md  DEPLOYMENT_TROUBLESHOOTING.md  DEVELOPMENT.md  ENHANCED_IMAGE_SEARCH.md  FRONTEND_PROGRESS_INDICATOR.md  GROUPED_IMAGE_DELETION_IMPROVEMENTS.md  IMAGE_SUMMARIZATION.md  LANGUAGE_CONFIGURATION.md  OCR_FEATURE.md  OPTIMIZER.md  PDF_IMAGE_EXTRACTION.md  PRESENTATION.md  PROCESS_MANAGEMENT.md  README.md  RagMeDocs.data-analysis.md  RagMeImages.data-analysis.md  SETTINGS_UI_IMPROVEMENTS.md  STORAGE_SERVICE.md  TROUBLESHOOTING.md  USER_GUIDE.md  VECTOR_DB_ABSTRACTION.md
examples/: milvus_example.py  milvus_integration_demo.py  pattern_deletion_example.py  switch_to_milvus.py  vector_db_usage.py  weaviate_local_example.py
frontend/: .eslintrc.js  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
src/: __init__.py
src/ragme/: agent.py  (+15 more)
tests/: __init__.py  conftest.py  test_add_json.py  test_agent_refactor.py  test_agents_abstract.py  test_agents_config.py  test_agents_factory.py  test_agents_integration.py  test_api.py  test_common.py  test_config_basic.py  test_config_integration.py  test_config_manager.py  test_config_security.py  test_count_documents_api.py  test_data_processing_integration.py  test_data_processing_pipeline.py  test_data_processing_processor.py  test_data_processing_report_generator.py  test_datetime_listing.py  test_document_overlap.py  test_friendli_ai.py  test_i18n_configuration.py  test_image_processor.py  test_language_configuration.py  test_local_agent.py  test_ocr_functionality.py  test_pdf_image_extraction.py  test_ragme.py  test_ragme_agent.py  test_storage.py  test_storage_config.py  test_storage_management.py  test_storage_management_runner.py  test_vdb_management.py  test_vector_db.py  test_vector_db_base.py  test_vector_db_factory.py  test_vector_db_image_methods.py  test_vector_db_milvus.py  (+1 more)
tools/: check_weaviate_modules.py  clean-up-tags.sh  cleanup-processed-markers.sh  cleanup-test-collections.sh  cleanup-test-files.sh  config-validator.sh  data_processing.sh  lint-ci.sh  lint-go.sh  lint-typescript.sh  lint.sh  optimize.sh  podman-compose.weaviate.yml  recover-collections.sh  storage.sh  tail-logs.sh  test-integration-agents.sh  test-integration.sh  test-with-backup.sh  threshold_optimizer.py  vdb.sh  weaviate-local.sh
(+128 files in other folders)
